--- a/index.html
+++ b/index.html
@@ -8,6 +8,198 @@
         <link rel="stylesheet" href=".//css/styles.css">
 </head>
 <body>
-        <div>salom</div>
+        <div class="background">
+                <header class="header container">
+                        <img src=".//img/IMAGE.png" alt="img" class="logo">
+                        <ul class="navbar">
+                                <li class="nav_link">
+                                        <a href="#" class="link">About</a>
+                                </li>
+                                <li class="nav_link">
+                                        <a href="#" class="link">Features</a>
+                                </li>
+                                <li class="nav_link">
+                                        <a href="#" class="link">How to Use</a>
+                                </li>
+                                <li class="nav_link">
+                                        <a href="#" class="link">Download</a>
+                                </li>
+                        </ul>
+                </header>
+                <section class="main_img">
+                        <img src=".//img/IMAGE1.png" alt="img" class="img">
+                        <div class="main_subject container">
+                                <h1>
+                                        Momentum
+                                </h1>
+                                <p class="main_p">
+                                        Launch your product — and savor the momentum.
+                                </p>
+                                <div class="get">
+                                        <a href="#" class="get_link">Get the App</a>
+                                </div>
+                        </div>
+                </section>
+        </div>
+        <div class="background_main">
+                <div class="subject_page2">
+                        <p class="main_page2">
+                                Aenean Consectetur Porta
+                        </p>
+                        <h3 class="subject_main">Nullam quis risus eget urna mollis ornare vel eu leo.</h3>
+                </div>
+                <img src=".//img/IMAGE2.png" alt="img" class="page2_img">
+        </div>
+        <div class="cards container">
+                <div class="card">
+                        <div class="card_text">
+                                <p class="main_page2">Aenean Consectetur</p>
+                                <h3 class="card_h3">Cay sociis nato que penatibus et</h3>
+                                <p class="card_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                        </div>
+                        <img src=".//img/IMAGE3.png" alt="img" class="card_img">
+                </div>
+
+                <div class="card row_reverse">
+                        <div class="card_text">
+                                <p class="main_page2">ConsectUltricies</p>
+                                <h3 class="card_h3">Amet Ipsum</h3>
+                                <p class="card_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                        </div>
+                        <img src=".//img/IMAGE4.png" alt="img" class="card_img">
+                </div>
+
+                <div class="card">
+                        <div class="card_text">
+                                <p class="main_page2">Aenean Consectetur Porta</p>
+                                <h3 class="card_h3">Magna Porta Sit Bibendum</h3>
+                                <p class="card_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                        </div>
+                        <img src=".//img/IMAGE5.png" alt="img" class="card_img">
+                </div>
+        </div>
+        <div class="content">
+                <div class="content_card">
+                        <img src=".//img/IMAGE6.png" alt="img">
+                        <h4 class="content_h4">Activity Notifications</h4>
+                        <p class="content_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                </div>
+                <div class="content_card">
+                        <img src=".//img/IMAGE7.png" alt="img">
+                        <h4 class="content_h4">Custom Timing</h4>
+                        <p class="content_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                </div>
+                <div class="content_card">
+                        <img src=".//img/IMAGE8.png" alt="img">
+                        <h4 class="content_h4">Mobile Optimized</h4>
+                        <p class="content_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+                </div>
+        </div>
+        <div class="contenet_referense">
+                <div class="referense">
+                        <h5 class="referense_h5">+12k</h5>
+                        <p class="referense_p">Nibh Elit Tristique</p>
+                </div>
+                <div class="referense">
+                        <h5 class="referense_h5">84</h5>
+                        <p class="referense_p">Aenean Condimentum</p>
+                </div>
+                <div class="referense">
+                        <h5 class="referense_h5">3,07</h5>
+                        <p class="referense_p">Quam Inceptos</p>
+                </div>
+                <div class="referense">
+                        <h5 class="referense_h5">24h</h5>
+                        <p class="referense_p">Ullamcorper</p>
+                </div>
+        </div>
+        <div class="container food_menu">
+                <div class="card">
+                        <div class="card_text">
+                                <p class="main_page2">Aenean Consectetur Porta</p>
+                                <h3 class="card_h3">Sem Risus Elit Vestibulum</h3>
+                                <p class="card_p">Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.</p>
+                        </div>
+                        <img src=".//img/IMAGE9.png" alt="img" class="card_img">
+                </div>
+
+                <div class="card row_reverse">
+                        <div class="card_text">
+                                <p class="main_page2">Parturient Tortor</p>
+                                <h3 class="card_h3">Amet Ipsum</h3>
+                                <p class="card_p">Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.</p>
+                        </div>
+                        <img src=".//img/IMAGE10.png" alt="img" class="card_img">
+                </div>
+        </div>
+        <div class="container referense_journals">
+                <div>
+                        <img src=".//img/“.png" alt="icon">
+                </div>
+                <p class="text">HeadNulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Pus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.ing</p>
+                <div class="journals">
+                        <h6 class="journals_h6">Joshua Home</h6>
+                        <div class="line"></div>
+                        <h6 class="journals_h6 color">New York Times</h6>
+                </div>
+                <div class="square_">
+                        <p class="square colors"></p>
+                        <p class="square"></p>
+                </div>
+        </div>
+        <div class="container partners">
+                <img src=".//img/IMAGE11.png" alt="icon">
+        </div>
+        <img src=".//img/IMAGE12.png" alt="icon">
+        <div class="background_color">
+                <div class="ready container">
+                        <h3 class="get_started">Ready to get started?</h3>
+                        <div class="button">
+                                <div class="button_link links_color">
+                                        <a href="#" class="link_a">Download Now</a>
+                                </div>
+                                <div class="button_link">
+                                        <a href="#" class="link_a">Get in Touch</a>
+                                </div>
+                        </div>
+                </div>
+        </div>
+        <div class="back">
+                <div class="last_page container">
+                        <h3 class="updates">Get updates from Richard</h3>
+                        <p class="updates_p">New course alerts, discounts and free lessons</p>
+                        <div class="e-mail">
+                                <input type="email" name="email" id="email" value="" placeholder="Enter your email" class="email">
+                                <input type="submit" value="Subscribe" class="submit">
+                        </div>
+                </div>
+        </div>
+        <footer class="footer">
+                <div class="container last_footer">
+                        <div class="footer_img">
+                                <img src=".//img/IMAGE13.png" alt="img">
+                        </div>
+                        <ul class="footer_nav">
+                                <li class="footer_link">
+                                        <a href="" class="link_footer_a">Email</a>
+                                </li>
+                                <li class="footer_link">
+                                        <a href="" class="link_footer_a">Instagram</a>
+                                </li>
+                                <li class="footer_link">
+                                        <a href="" class="link_footer_a">Facebook</a>
+                                </li>
+                                <li class="footer_link">
+                                        <a href="" class="link_footer_a">Facebook</a>
+                                </li>
+                                <li class="footer_link">
+                                        <a href="" class="link_footer_a">Image License Info</a>
+                                </li>
+                                <li class="footer_link">
+                                        <a href="" class="link_footer_a">Powered by Webflow</a>
+                                </li>
+                        </ul>
+                </div>
+        </footer>
 </body>
 </html>
